Migrate `java.net.URL` constructors to `URI(...).toURL()`
`URL`'s string-arg constructors are `@Deprecated(since="20")`
Replace both sites with the documented `URI`-based equivalents.

Signed-off-by: Christoph Obexer <cobexer@gradle.com>